Add bubble, change animation and background-color

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <section class="section" id="flyzone">
-    <img src="./img/jetpack_pink.png" alt="" id="pinkman">
+    <img src="./img/jetpack_pink.png" alt="Guy with a pink jetpack flying around" id="pinkman">
+    <img src="./img/bubble.svg" alt="A bubble">
   </section>
 </body>
 </html>
