--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
   <section class="section" id="flyzone">
     <img src="./img/jetpack_pink.png" alt="Guy with a pink jetpack flying around" id="pinkman">
-    <img src="./img/bubble.svg" alt="A bubble">
+
+    <img class="bubble" src="./img/bubble.svg" alt="A bubble">
+    <img class="bubble2" src="./img/bubble.svg" alt="A bubble">
+
   </section>
 </body>
 </html>
